email field width and overflow fix on h2

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ ul.child li {
     margin: 5px 0;
 }
 .connect #email {
+    min-width: 200px;
     height: 40px;
 }
 .connect .sprite {
@@ -133,6 +134,9 @@ form select {
     text-align: right;
 }
 @media (max-width:768px) {
+    .card h2 {
+        font-size: 1.2em;
+    }
     .featured .col-sm-4 {
         height: auto !important;
     }
